# myake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
.amend/: project.lua
.myake/Package/: All.cmake
.myake/Package/Archive/: Config.cmake
.myake/Package/Debian/: Common.cmake  Config.cmake
.myake/Package/Ubuntu/: Config.cmake
.myake/maintainer/: packages.cmake
cmake/: CMakeLists.txt  MyakeConfig.cmake.in
cmake/My/: Bits.cmake  Build.cmake  Config.cmake  External.cmake  Init.cmake  Lists.cmake  Package.cmake  Platform.cmake  Report.cmake  index.md
cmake/My/Bits/: Auxiliary.cmake  Nested.cmake  Options.cmake  Set.cmake  String.cmake  Structure.cmake  Toplevel.cmake  Tree.cmake
cmake/My/Package/: Generator.cmake  Variables.txt
cmake/My/Package/Generator/: Archive.cmake  Bundle.cmake  Common.cmake  Cygwin.cmake  DEB.cmake  DragNDrop.cmake  External.cmake  FreeBSD.cmake  IFW.cmake  NSIS.cmake  NuGet.cmake  Nullsoft.cmake  RPM.cmake  WIX.cmake  productbuild.cmake
cmake/My/Package/Generator/.amend/: cpack-docs.lua  cpack.lua
cmake/My/Package/Generator/.amend/myake/: pandoc-filter.lua  pandoc.lua  rst.lua
cmake/My/Package/Generator/.amend/myake/generator/: Archive.lua  Bundle.lua  Common.lua  Cygwin.lua  DEB.lua  DragNDrop.lua  External.lua  FreeBSD.lua  IFW.lua  RPM.lua  WIX.lua  productbuild.lua
cmake/My/Package/Generator/.amend/myake/generator/help/: Cygwin.lua  External.lua  NSIS.lua  NuGet.lua  WIX.lua
cmake/My/Platform/: FreeDesktop.cmake  Linux.cmake  Unix.cmake
cmake/My/Platform/Common/: Unix.cmake
cmake/My/Platform/Debian/: Section.cmake
cmake/My/Platform/Distribution/: Debian.cmake  Ubuntu.cmake
cmake/My/Platform/Unix/: Distribution.cmake  Standards.cmake  Util.cmake
cmake/My/Platform/Unix/Distribution/: Debian.cmake  Neon.cmake  Ubuntu.cmake
cmake/My/Platform/Unix/Standard/: Common.cmake  Find.cmake  FreeDesktop.cmake  Plain.cmake
cmake/My/Platform/Unix/Standards/: Common.cmake  FreeDesktop.cmake  Plain.cmake
cmake/My/Platform/Utils/: Unix.cmake
docs/: CMakeLists.txt
docs/My/: Bits.md  Build.md  Config.md  External.md  Init.md  Lists.md  Package.md  Platform.md  Report.md  index.md
docs/My/Bits/: Auxiliary.md  Options.md  Set.md  String.md  Structure.md  Toplevel.md
docs/My/Package/: Generator.md
docs/My/Package/Generator/: Archive.md  Common.md  DEB.md  RPM.md
docs/My/Platform/: FreeDesktop.md  Linux.md  Unix.md
docs/My/Platform/Common/: Unix.md
docs/My/Platform/Debian/: Section.md
docs/My/Platform/Distribution/: Debian.md
docs/My/Platform/Unix/: Distribution.md  Standards.md  Util.md
docs/My/Platform/Utils/: Unix.md
tests/: Test.cmake
tests/Test/: Options.cmake  Package.cmake  Structure.cmake
tests/Test/Bits/: Nested.cmake  String.cmake  Structure.cmake  Tree.cmake
tools/: CMakeLists.txt  update-docs.lua
tools/cmake/: module.lua  parse_arguments.lua
tools/myake/: class.lua  doc.lua  fs.lua  log.lua  string.lua  table.lua
